--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS --> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     
     <!-- Custom CSS -->
@@ -37,6 +37,24 @@
         </ul>
       </div>
     </nav>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+         </div>
+        </div>
+        <div class="col-6"><img  class="img-fluid" src="imgs/hand2.png"></div>
+      </div>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
